--- a/index.html
+++ b/index.html
@@ -84,6 +84,45 @@
 
         <span style="font-size:x-small"><br /><em>* denotes shared first authorship</em></span>
         <ul>
+<li class="pub"><a href="https://ashpublications.org/blood/article/doi/10.1182/blood.2022016033/486036/Proteomic-and-Phosphoproteomic-Landscapes-of-Acute">Proteomic and Phosphoproteomic Landscapes of Acute Myeloid Leukemia</a><br />
+<span class="pubdetails">Kramer MH, Zhang Q, Sprung R, Day RB, Erdmann-Gilmore P, Li Y, Xu Z, Helton NM, George DR, Mi Y, <em>et al.</em>. Blood. 2022. doi:10.1182/blood.2022016033</span>
+</li>
+<li class="pub"><a href="https://ashpublications.org/bloodadvances/article/doi/10.1182/bloodadvances.2022007705/485992/Discovery-of-a-novel-genomic-alteration-that">Discovery of a novel genomic alteration that renders leukemic cells resistant to CD19-targeted immunotherapies</a><br />
+<span class="pubdetails">Ghobadi A, Landmann J, Carter A, Cooper ML, Selli ME, Chang J, Baker M, <strong>Miller CA</strong>, Ferraro F, Chen DY, <em>et al.</em>. Blood Advances. 2022. doi:10.1182/bloodadvances.2022007705</span>
+</li>
+<li class="pub"><a href="https://aacrjournals.org/bloodcancerdiscov/article/3/4/330/705268/Convergent-Clonal-Evolution-of-Signaling-Gene">Convergent clonal evolution of signaling gene mutations is a hallmark of myelodysplastic syndrome progression</a><br />
+<span class="pubdetails">Menssen AJ, Khanna A, <strong>Miller CA</strong>, Nonavinkere SS, Chang GS, Shao J, Robinson J, O'Laughlin M, Fronick CC, Fulton RS, <em>et al.</em>. Blood Cancer Discovery. 2022. doi:10.1158/2643-3230.BCD-21-0155</span>
+</li>
+<li class="pub"><a href="https://www.sciencedirect.com/science/article/pii/S0301472X22001564?via%3Dihub">Recurrent transcriptional responses in AML and MDS patients treated with decitabine</a><br />
+<span class="pubdetails">Upadhyay P, Beales J, Shah NM, Gruszczynska A, <strong>Miller CA</strong>, Petti AA, Ramakrishnan SM, Link DC, Ley TJ, Welch JS. Experimental Hematology. 2022. doi:10.1016/j.exphem.2022.04.002</span>
+</li>
+<li class="pub"><a href="https://aacrjournals.org/bloodcancerdiscov/article-lookup/doi/10.1158/2643-3230.BCD-21-0050">Genetic and transcriptional contributions to relapse in normal karyotype acute myeloid leukemia</a><br />
+<span class="pubdetails">Petti AA, Khan SM, Xu Z, Helton N, Fronick CC, Fulton R, Ramakrishnan SM, Nonavinkere SS, Heath SE, Westervelt P, <em>et al.</em>. Blood Cancer Discovery. 2022. doi:10.1158/2643-3230.BCD-21-0050 </span>
+</li>
+<li class="pub"><a href="https://ashpublications.org/blood/article/139/3/461/482663/DNMT3A-overgrowth-syndrome-is-associated-with-the">DNMT3A overgrowth syndrome is associated with the development of hematopoietic malignancies in children and young adults</a><br />
+<span class="pubdetails">Ferris MA, Smith AM, Heath SE, Duncavage EJ, Oberley M, Freyer D, Wynn R, Douzgou S, Maris JM, Reilly AF, <em>et al.</em>. Blood, The Journal Of The American Society Of Hematology. 2022. doi:10.1182/blood.2021014052 </span>
+</li>
+<li class="pub"><a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9244807/">Decitabine salvage for TP53-mutated, relapsed/refractory acute myeloid leukemia after cytotoxic induction therapy</a><br />
+<span class="pubdetails">Ferraro F, Gruszczynska A, Ruzinova MB, <strong>Miller CA</strong>, Percival ME, Uy GL, Pusic I, Jacoby MA, Christopher MJ, Kim MY, <em>et al.</em>. Haematologica. 2022. doi:10.3324/haematol.2021.280153</span>
+</li>
+<li class="pub"><a href="https://aacrjournals.org/bloodcancerdiscov/article/3/3/176/694684/Efficient-Algorithms-Unlock-Understanding-of">Efficient Algorithms Unlock Understanding of Clonal Evolution in Cancer</a><br />
+<span class="pubdetails"><strong>Miller CA</strong>. Blood Cancer Discovery. 2022. doi:10.1158/2643-3230.BCD-22-0036 </span>
+</li>
+<li class="pub"><a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8933692/">Somatic Dnmt3a inactivation leads to slow, canonical DNA methylation loss in murine hematopoietic cells</a><br />
+<span class="pubdetails">Smith AM, Verdoni AM, Abel HJ, Chen DY, Ketkar S, Leight ER, <strong>Miller CA</strong>, Ley TJ. Iscience. 2022. doi:10.1016/j.isci.2022.104004</span>
+</li>
+<li class="pub"><a href="https://www.sciencedirect.com/science/article/pii/S2210776222000382">Genomic and transcriptomic somatic alterations of hepatocellular carcinoma in non-cirrhotic livers</a><br />
+<span class="pubdetails">Skidmore ZL, Kunisaki J, Lin Y, Cotto KC, Barnell EK, Hundal J, Krysiak K, Magrini V, Trani L, Walker JR, <em>et al.</em>. Cancer Genetics. 2022. doi:10.1016/j.cancergen.2022.04.002</span>
+</li>
+<li class="pub"><a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8719088/">Tumor suppressor function of WT1 in acute promyelocytic leukemia</a><br />
+<span class="pubdetails">Christopher MJ, Katerndahl CD, LeBlanc HR, Elmendorf TT, Basu V, Gang M, Menssen AJ, Spencer DH, Duncavage EJ, Ketkar S, <em>et al.</em>. Haematologica. 2022. doi:10.3324/haematol.2021.279601</span>
+</li>
+<li class="pub"><a href="https://www.nature.com/articles/s41375-021-01476-y">Focal disruption of DNA methylation dynamics at enhancers in IDH-mutant AML cells</a><br />
+<span class="pubdetails">Wilson ER, Helton NM, Heath SE, Fulton RS, Payton JE, Welch JS, Walter MJ, Westervelt P, DiPersio JF, Link DC, <em>et al.</em>. Leukemia. 2022. doi:10.1038/s41375-021-01476-y </span>
+</li>
+<li class="pub"><a href="https://www.pnas.org/doi/full/10.1073/pnas.2116427118">Immunosuppression and outcomes in adult patients with de novo acute myeloid leukemia with normal karyotypes</a><br />
+<span class="pubdetails">Ferraro F*, <strong>Miller CA*</strong>, Christensen KA, Helton NM, O’Laughlin M, Fronick CC, Fulton RS, Kohlschmidt J, Eisfeld A, Bloomfield CD, <em>et al.</em>. Proceedings Of The National Academy Of Sciences. 2021. 10.1073/pnas.2116427118</span>
+</li>
 <li class="pub"><a href="https://insight.jci.org/articles/view/138734">HPV transcript expression affects cervical cancer response to chemoradiation</a><br />
 <span class="pubdetails">Ruiz FJ, Inkman M, Rashmi R, Muhammad N, Gabriel N, <strong>Miller CA</strong>, McLellan MD, Goldstein M, Markovina S, Grigsby PW, <em>et al.</em>. Jci Insight. 2021. doi:10.1172/jci.insight.138734</span>
 </li>
