--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
       <div id="title">
 	<br />
     	<h1>Chris Miller, PhD</h1>
-	<h2>Assistant Professor - Division of Oncology</h2>
-	<h2>McDonnell Genome Institute</h2>
+	<h2>Associate Professor - Division of Oncology</h2>
 	<h2>Washington University School of Medicine</h2>
       </div>
       <div id="contact">
@@ -38,8 +37,8 @@
 	<h3>About Me</h3>
       </div>
       <div class="rightcol">
-	  <p>I work in the Division of Oncology and McDonnell Genome Institute at Washington University in St. Louis, 
-	     where I develop and apply computational tools to give us insight into the origins and progression of cancer.
+	  <p>I work in the Division of Oncology at Washington University in St. Louis, where I develop and apply 
+            computational tools to give us insight into the origins and progression of cancer.
 	  </p>
 	  <p>My core research interests include:
       <p>
@@ -48,7 +47,7 @@
   	  <li>Integrative analysis to place genomic aberrations into a functional context</li>
   	  <li>Effective design and targeting of cancer immunotherapies</li>
   	  <li>Developing open-source software for integrating, mining, and visualizing genomic data</li>
-  	  <li>Utilizing online technologies to drive science communication and collaboration</li>
+  	  <li>Utilizing technology to drive science communication and collaboration</li>
 	</ul>
       </div>
     </div>
@@ -435,6 +434,12 @@
       </div>
       <div class="rightcol">
 	<ul>
+          <li>Genomic and Transcriptional evolution of AML at single-cell resolution<br />
+            Institute of Medical Informatics - Münster, Germany (2021)
+          </li>
+          <li>Sequencing, Variant Calling, and Cancer Genomics<br />
+            Genomics Education Partnership (GEP) Workshop (2020)
+          </li>
           <li>Tumor Heterogeneity and Evolution<br />
             Genomics in Medicine Seminar Series (2019)	
           </li>
@@ -476,6 +481,15 @@
       </div>
       <div class="rightcol">
         <ul>
+          <li>Instructor - Advanced Sequencing Technologies & Bioinformatics Analysis, Cold Spring Harbor Laboratory course (2021-)</li>
+          <li>Co-organizer - WUSTL Bioinformatics Workshop<br />
+          <ul>
+            <li class="sub">full academic year course, developed curriculum, recruited faculty</li>
+            <li class="sub">delivered lectures on sequencing, informatics, somatic variant calling, 
+     	 	 bisulfite sequencing and analysis, bash, HPC/LSF/Docker, Tumor 
+ 	 Heterogeneity, etc</li>
+            </ul>
+          </li>
           <li>Lecturer - High-Throughput Biology: From Sequence to Networks - CSHL/CBW Course (2019)</li>
           <li>WUSTL Bioinformatics Workshops (2017-present)<br />
 	    <ul>
